@@ -1,4 +1,6 @@
 
+    o  fastlp implementieren
+
     o  na.action defaults checken
 
     o  wpbc3 mit na.action = na.omit ODER na.pass???
